graph-1d17b803-4b18-48a3-b0f7-ed6e46eb9b47/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-c5f298c6-06cb-40c3-a751-c5f652137c18
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-c5f298c6-06cb-40c3-a751-c5f652137c18
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
