graph-1d17b803-4b18-48a3-b0f7-ed6e46eb9b47/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-c5f298c6-06cb-40c3-a751-c5f652137c18
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-c5f298c6-06cb-40c3-a751-c5f652137c18
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-c5f298c6-06cb-40c3-a751-c5f652137c18
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-c5f298c6-06cb-40c3-a751-c5f652137c18
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
